--- a/a-random-developer-cv.html
+++ b/a-random-developer-cv.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My CV</title>
 </head>
 <body>
-    <h1>In class Project</h1>
-    <ul>
-        <li>Im a random developer</li>
-    </ul>
+    <h1>Random developer</h1>
+    <p>
+        Fullstack developer in Quebec
+    </p>
 </body>
 </html>
