--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>In class Project</h1>
     <ul>
         <li>Im a random developer</li>
+        <!-- Include your name after this line -->
     </ul>
 </body>
 </html>
