Forked Project Updates

--- a/igorsteffen.html
+++ b/igorsteffen.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Igor Steffen</title>
 </head>
 <body>
-    <h1>In class Project</h1>
+    <h1>Last Professional Experience</h1>
     <ul>
-        <li>Im a random developer</li>
-        <!-- Include your name after this line -->
-         <p>Igor Steffen</p>
+        <li>Technical Application</li>
+        <li>Project Designer</li>
+        <li>Intern</li>
     </ul>
 </body>
 </html>
