--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li>Im a random developer</li>
         <!-- Include your name after this line -->
          <p>Igor Steffen</p>
+         <p>Vivek Sangwan</p>
     </ul>
 </body>
 </html>
