--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <ul>
         <li>Im a random developer</li>
         <!-- Include your name after this line -->
-         <p>Igor Steffen</p>
-         <p>Vivek Sangwan</p>
+         <li>Igor Steffen</li>
+         <li>Vivek Sangwan</li>
+         <li>Balraj Heer</li>
     </ul>
 </body>
 </html>
