--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>In class Project</h1>
-    <ul>
-        <li>Im a random developer</li>
-        <!-- Include your name after this line -->
-         <li>Igor Steffen</li>
-         <li>Vivek Sangwan</li>
-         <li>Balraj Heer</li>
-    </ul>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <div id="app">
+        Welcome!
+    </div>
+    
+    <script src="dist/main.js"></script>
 </body>
 </html>
