--- a/feedback.html
+++ b/feedback.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Form</title>
     <style>
         body {
@@ -105,29 +105,56 @@
     </style>
 </head>
 <body>
-  <div class="feedback-container">
-    <h1>Feedback Form</h1>
-    <form id="feedbackForm">
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="rating">Rating (1 to 5):</label>
-        <input type="number" id="rating" name="rating" min="1" max="5" required>
-      </div>
-      <div class="form-group">
-        <label for="comments">Comments:</label>
-        <textarea id="comments" name="comments" rows="4" required></textarea>
-      </div>
-      <button type="submit" class="submit-btn">Submit Feedback</button>
-    </form>
-    <p id="thankYouMessage" class="hidden">Thank you for your feedback!</p>
-  </div>
-  <script src="feedback.js"></script>
+    <div class="feedback-container">
+        <h1>Feedback Form</h1>
+        <form id="feedbackForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label>Rating:</label>
+            <div class="star-rating">
+                <input type="radio" id="star5" name="rating" value="5" required />
+                <label for="star5" title="5 stars"></label>
+                <input type="radio" id="star4" name="rating" value="4" />
+                <label for="star4" title="4 stars"></label>
+                <input type="radio" id="star3" name="rating" value="3" />
+                <label for="star3" title="3 stars"></label>
+                <input type="radio" id="star2" name="rating" value="2" />
+                <label for="star2" title="2 stars"></label>
+                <input type="radio" id="star1" name="rating" value="1" />
+                <label for="star1" title="1 star"></label>
+            </div>
+
+            <label for="comments">Comments:</label>
+            <textarea id="comments" name="comments" rows="5"></textarea>
+
+            <button type="submit">Submit</button>
+        </form>
+        <p id="thankYouMessage" class="hidden">Thank you for your feedback!</p>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const feedbackForm = document.getElementById("feedbackForm");
+            const thankYouMessage = document.getElementById("thankYouMessage");
+
+            feedbackForm.addEventListener("submit", function (event) {
+                event.preventDefault(); // Prevent the default form submission
+
+                const rating = document.querySelector('input[name="rating"]:checked');
+                const ratingValue = rating ? rating.value : "No rating";
+
+                console.log(`Rating Selected: ${ratingValue}`);
+
+                thankYouMessage.textContent = `Thank you for your feedback! ${ratingValue} stars.`;
+                thankYouMessage.classList.remove("hidden");
+
+                feedbackForm.reset();
+            });
+        });
+    </script>
 </body>
 </html>
